# Natural-Selection-Simulation

./: emulator.py  environment.py  main.py  organisms.py  pyproject.toml
